[gd_scene load_steps=3 format=3 uid="uid://cy30tn63lifwh"]

[ext_resource type="Script" uid="uid://xyxl6wblq5h4" path="res://mission_window.gd" id="1_6omtk"]
[ext_resource type="Texture2D" uid="uid://dp2y4fsidn0yj" path="res://sprites/noble_gray.png" id="2_asjii"]

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 9.0
offset_right = -1164.0
offset_bottom = -419.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6omtk")
unselected_portrait = ExtResource("2_asjii")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_top = 15.0
offset_right = -13.0
offset_bottom = 55.0
grow_horizontal = 0
text = "X"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 58.0
offset_right = 710.0
offset_bottom = 94.0
text = "Título de la misión"

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 110.0
offset_right = 721.0
offset_bottom = 246.0
text = "Descripción de la misión"
autowrap_mode = 2

[node name="SlotContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 349.0
offset_right = 631.0
offset_bottom = 535.0
alignment = 1

[node name="AgentPortrait" type="TextureButton" parent="SlotContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_asjii")
texture_disabled = ExtResource("2_asjii")
ignore_texture_size = true
stretch_mode = 5

[node name="AgentPortrait2" type="TextureButton" parent="SlotContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_asjii")
ignore_texture_size = true
stretch_mode = 5

[node name="enviar" type="Button" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 569.0
offset_right = 482.0
offset_bottom = 630.0
text = "Enviar Agentes
"

[connection signal="pressed" from="Button" to="." method="_on_button_closed_pressed"]
[connection signal="pressed" from="SlotContainer/AgentPortrait" to="." method="_on_agent_portrait_pressed"]
[connection signal="pressed" from="SlotContainer/AgentPortrait2" to="." method="_on_agent_portrait2_pressed"]
[connection signal="pressed" from="enviar" to="." method="_on_button_resolver_pressed"]
